# LuaCppB

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  COMPAT.md  LICENSE  MANUAL.md  Makefile  NOTICE  README.md  amalgamate.sh  amalgamate_lua.sh  meson.build  meson_options.txt
benchmarks/: .gitignore  lua_c_api.cpp  luacppb.cpp  main.cpp  meson.build  sol.cpp
cmake/: FindLuaCppB.cmake  FindLuaJIT.cmake
examples/: Functions.cpp  Objects.cpp  main.cpp
examples/lua/: functions.lua  objects.lua
headers/luacppb/: Base.h  Compat.h  Config.h  Error.h  Function.h  Fwd.h  Global.h  Impl.h  LuaCppB.h  LuaJIT.h  LuaReference.h  LuaState.h  LuaType.h  Meta.h  Platform.h  Reference.h  Stack.h  State.h  Status.h  Table.h  Value.h
headers/luacppb/Container/: Container.h  Map.h  Set.h  Tuple.h  Vector.h
headers/luacppb/Container/Impl/: Container.h  Map.h  Set.h  Tuple.h  Vector.h
headers/luacppb/Core/: Alloc.h  Debug.h  Error.h  GC.h  Library.h  Loader.h  Panic.h  Runtime.h  RuntimeInfo.h  Stack.h  StackGuard.h  State.h  Status.h  Throw.h
headers/luacppb/Core/Impl/: Debug.h  Library.h  Stack.h  Throw.h
headers/luacppb/Invoke/: ArgRet.h  Callable.h  Continuation.h  Coro.h  Descriptor.h  Error.h  Invoke.h  Lua.h  Method.h  Native.h  Promise.h
headers/luacppb/Invoke/Impl/: ArgRet.h  Callable.h  Continuation.h  Coro.h  Descriptor.h  Invoke.h  Lua.h  Method.h  Native.h
headers/luacppb/Object/: Bind.h  Boxer.h  Class.h  Field.h  Method.h  Native.h  Object.h  Registry.h  Wrapper.h
headers/luacppb/Object/Impl/: Bind.h  Boxer.h  Class.h  Field.h  Method.h  Native.h  Object.h  Registry.h  Wrapper.h
headers/luacppb/Reference/: Base.h  FastPath.h  Field.h  Handle.h  Primary.h  Reference.h  Registry.h
headers/luacppb/Reference/Impl/: Base.h  FastPath.h  Field.h  Handle.h
headers/luacppb/Value/: Base.h  Factory.h  FastPath.h  Iterator.h  Native.h  Types.h  UserData.h  Value.h
headers/luacppb/Value/Impl/: Factory.h  FastPath.h  Native.h  Types.h  UserData.h  Value.h
lua-source/: meson.build
source/: Compat.cpp  Error.cpp  Global.cpp  LuaJIT.cpp  LuaReference.cpp  LuaState.cpp  Reference.cpp  Stack.cpp  State.cpp  Table.cpp  Value.cpp  meson.build
source/Core/: Alloc.cpp  Debug.cpp  Error.cpp  GC.cpp  Loader.cpp  Panic.cpp  RuntimeInfo.cpp  Stack.cpp  StackGuard.cpp  State.cpp
source/Invoke/: Callable.cpp  Continuation.cpp  Coro.cpp  Lua.cpp  Native.cpp
source/Object/: Field.cpp
source/Reference/: Base.cpp  FastPath.cpp  Field.cpp  Handle.cpp  Primary.cpp  Registry.cpp
source/Value/: Iterator.cpp  Types.cpp  Value.cpp
tests/: Reference.cpp  _test.cpp  main.cpp  test.lua
tests/unit/: Container.cpp  Core.cpp  Coro.cpp  Debug.cpp  Invoke.cpp  Object.cpp  Reference.cpp  UserData.cpp  Value.cpp  main.cpp  meson.build
tools/: amalgamate.sh  amalgamate_lua.sh
