cmake_minimum_required(VERSION 3.1)
project(LuaCppB)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Set up parameter defaults
if (NOT DEFINED LUA_CUSTOM_VERSION)
	set(LUA_CUSTOM_VERSION 5.3.5)
endif (NOT DEFINED LUA_CUSTOM_VERSION)

if (NOT DEFINED LUACPPB_CUSTOM_LUA_SOURCE)
	set(LUACPPB_CUSTOM_LUA_SOURCE ${CMAKE_SOURCE_DIR}/lua-source/lua-${LUA_CUSTOM_VERSION})
endif (NOT DEFINED LUACPPB_CUSTOM_LUA_SOURCE)

if (NOT DEFINED LUACPPB_COMPILE_CUSTOM_LUA)
	set(LUACPPB_COMPILE_CUSTOM_LUA ON)
endif (NOT DEFINED LUACPPB_COMPILE_CUSTOM_LUA)

if (NOT DEFINED LUACPPB_LUAJIT)
	set(LUACPPB_LUAJIT OFF)
endif (NOT DEFINED LUACPPB_LUAJIT)

set(LUACPPB_FPIC ON)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_LIST_DIR}/cmake/")
find_package(LuaCppB REQUIRED)

file(GLOB_RECURSE LUACPPB_UNIT_SRC ${CMAKE_SOURCE_DIR}/tests/unit/*.cpp)
add_executable(lcppbunit ${LUACPPB_UNIT_SRC})
target_compile_definitions(lcppbunit PUBLIC ${LUACPPB_DEFINES})
target_include_directories(lcppbunit PUBLIC ${CMAKE_SOURCE_DIR}/tests/unit ${LUACPPB_HEADERS})
target_link_libraries(lcppbunit ${LUACPPB_LIBS})
